---
source: cli/tests/snapshot/main.rs
expression: err
---
error: destructuring patterns are not currently permitted in let blocks
  ┌─ [INPUTS_PATH]/errors/let_block_with_pat.ncl:5:3
  │
5 │   { b } = { b = 1 }
  │   ^^^^^
  │
  = Try re-writing your let block as nested `let ... in` expressions.
